FOR-2239: Sketchpad -> Fixed issues with background being shifted in datagrid

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -968,7 +968,7 @@ body.formio-dialog-open {
 .formio-view-sketchpad-background svg {
   width: 100%;
   height: 100%;
-  //padding: 1%;
+  position: absolute;
 }
 
 .formio-view-sketchpad-canvas,
